Assignment/another-resource/anh-nhan/assignment3/target/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "<INVALID>", "<INVALID>", "'boolean'", 
                     "'break'", "'class'", "'continue'", "'do'", "'if'", 
                     "'else'", "'extends'", "'int'", "'float'", "'new'", 
                     "'string'", "'then'", "'for'", "'return'", "'true'", 
                     "'false'", "'void'", "'nil'", "'this'", "'final'", 
                     "'static'", "'to'", "'downto'", "'+'", "'-'", "'*'", 
                     "'/'", "'\\'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'='", "'!='", "'<'", "'<='", "'>'", "'>='", "'^'", 
                     "'::'", "':='", "'('", "')'", "'['", "']'", "'.'", 
                     "','", "';'", "':'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "WS", "COMMENT", "BOOLEAN", 
                      "BREAK", "CLASS", "CONTINUE", "DO", "IF", "ELSE", 
                      "EXTENDS", "INT", "FLOAT", "NEW", "STRING", "THEN", 
                      "FOR", "RETURN", "TRUE", "FALSE", "VOID", "NIL", "THIS", 
                      "FINAL", "STATIC", "TO", "DOWNTO", "ADD", "SUB", "MUL", 
                      "DIV", "IDIV", "MOD", "NOT", "AND", "OR", "EQQ", "EQ", 
                      "NOTEQ", "LT", "LTEQ", "GT", "GTEQ", "CONCAT", "SCOPE", 
                      "ASSIGN", "LB", "RB", "LSB", "RSB", "DOT", "COMMA", 
                      "SEMI", "COLON", "LP", "RP", "INTLIT", "FLOATLIT", 
                      "STRING_LIT", "ID", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_type_name = 1
    RULE_classDecl = 2
    RULE_className = 3
    RULE_classMem = 4
    RULE_attributeDecl = 5
    RULE_mutableAttribute = 6
    RULE_muInit = 7
    RULE_immutableAttribute = 8
    RULE_immuInit = 9
    RULE_objAttribute = 10
    RULE_objInit = 11
    RULE_methodDecl = 12
    RULE_mainMethod = 13
    RULE_voidMethod = 14
    RULE_constructor = 15
    RULE_paramList = 16
    RULE_paramInit = 17
    RULE_stmt = 18
    RULE_stmt_wo_return = 19
    RULE_stmtBlock = 20
    RULE_stmtBlock_wo_return = 21
    RULE_stmtBlock_constructor = 22
    RULE_asmStmt = 23
    RULE_lhs = 24
    RULE_ifStmt = 25
    RULE_forStmt = 26
    RULE_breakStmt = 27
    RULE_continueStmt = 28
    RULE_returnStmt = 29
    RULE_method_invo_stmt = 30
    RULE_expr = 31
    RULE_exp2 = 32
    RULE_relational = 33
    RULE_exp3 = 34
    RULE_exp4 = 35
    RULE_exp5 = 36
    RULE_exp6 = 37
    RULE_exp7 = 38
    RULE_exp8 = 39
    RULE_exp9 = 40
    RULE_tail_part = 41
    RULE_exp10 = 42
    RULE_exp11 = 43
    RULE_exp11_access = 44
    RULE_exp11_call = 45
    RULE_exp12 = 46
    RULE_exp13 = 47
    RULE_expList = 48
    RULE_varDecl = 49
    RULE_mutableVar = 50
    RULE_immutableVar = 51
    RULE_objVar = 52
    RULE_varDecl_constructor = 53
    RULE_mutableVar_constructor = 54
    RULE_constructorInit = 55
    RULE_primitive_type = 56
    RULE_arrType = 57
    RULE_element_type = 58
    RULE_size = 59
    RULE_objType = 60
    RULE_literal = 61
    RULE_bool_lit = 62
    RULE_arr_exp = 63
    RULE_indexarr_lit = 64

    ruleNames =  [ "program", "type_name", "classDecl", "className", "classMem", 
                   "attributeDecl", "mutableAttribute", "muInit", "immutableAttribute", 
                   "immuInit", "objAttribute", "objInit", "methodDecl", 
                   "mainMethod", "voidMethod", "constructor", "paramList", 
                   "paramInit", "stmt", "stmt_wo_return", "stmtBlock", "stmtBlock_wo_return", 
                   "stmtBlock_constructor", "asmStmt", "lhs", "ifStmt", 
                   "forStmt", "breakStmt", "continueStmt", "returnStmt", 
                   "method_invo_stmt", "expr", "exp2", "relational", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", "tail_part", 
                   "exp10", "exp11", "exp11_access", "exp11_call", "exp12", 
                   "exp13", "expList", "varDecl", "mutableVar", "immutableVar", 
                   "objVar", "varDecl_constructor", "mutableVar_constructor", 
                   "constructorInit", "primitive_type", "arrType", "element_type", 
                   "size", "objType", "literal", "bool_lit", "arr_exp", 
                   "indexarr_lit" ]

    EOF = Token.EOF
    T__0=1
    WS=2
    COMMENT=3
    BOOLEAN=4
    BREAK=5
    CLASS=6
    CONTINUE=7
    DO=8
    IF=9
    ELSE=10
    EXTENDS=11
    INT=12
    FLOAT=13
    NEW=14
    STRING=15
    THEN=16
    FOR=17
    RETURN=18
    TRUE=19
    FALSE=20
    VOID=21
    NIL=22
    THIS=23
    FINAL=24
    STATIC=25
    TO=26
    DOWNTO=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    IDIV=32
    MOD=33
    NOT=34
    AND=35
    OR=36
    EQQ=37
    EQ=38
    NOTEQ=39
    LT=40
    LTEQ=41
    GT=42
    GTEQ=43
    CONCAT=44
    SCOPE=45
    ASSIGN=46
    LB=47
    RB=48
    LSB=49
    RSB=50
    DOT=51
    COMMA=52
    SEMI=53
    COLON=54
    LP=55
    RP=56
    INTLIT=57
    FLOATLIT=58
    STRING_LIT=59
    ID=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_TOKEN=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.classDecl()
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.CLASS):
                    break

            self.state = 135
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(BKOOLParser.BOOLEAN, 0)

        def INT(self):
            return self.getToken(BKOOLParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKOOLParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(BKOOLParser.STRING, 0)

        def arrType(self):
            return self.getTypedRuleContext(BKOOLParser.ArrTypeContext,0)


        def objType(self):
            return self.getTypedRuleContext(BKOOLParser.ObjTypeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_type_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_name" ):
                return visitor.visitType_name(self)
            else:
                return visitor.visitChildren(self)




    def type_name(self):

        localctx = BKOOLParser.Type_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type_name)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(BKOOLParser.BOOLEAN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(BKOOLParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(BKOOLParser.FLOAT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 140
                self.match(BKOOLParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 141
                self.arrType()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 142
                self.objType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def className(self):
            return self.getTypedRuleContext(BKOOLParser.ClassNameContext,0)


        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def classMem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassMemContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassMemContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = BKOOLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(BKOOLParser.CLASS)
            self.state = 146
            self.className()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 147
                self.match(BKOOLParser.EXTENDS)
                self.state = 148
                self.match(BKOOLParser.ID)


            self.state = 151
            self.match(BKOOLParser.LP)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.INT) | (1 << BKOOLParser.FLOAT) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOID) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 152
                self.classMem()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_className

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassName" ):
                return visitor.visitClassName(self)
            else:
                return visitor.visitChildren(self)




    def className(self):

        localctx = BKOOLParser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(BKOOLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttributeDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(BKOOLParser.MethodDeclContext,0)


        def constructor(self):
            return self.getTypedRuleContext(BKOOLParser.ConstructorContext,0)


        def mainMethod(self):
            return self.getTypedRuleContext(BKOOLParser.MainMethodContext,0)


        def voidMethod(self):
            return self.getTypedRuleContext(BKOOLParser.VoidMethodContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classMem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassMem" ):
                return visitor.visitClassMem(self)
            else:
                return visitor.visitChildren(self)




    def classMem(self):

        localctx = BKOOLParser.ClassMemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classMem)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.attributeDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.methodDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.constructor()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.mainMethod()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.voidMethod()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutableAttribute(self):
            return self.getTypedRuleContext(BKOOLParser.MutableAttributeContext,0)


        def immutableAttribute(self):
            return self.getTypedRuleContext(BKOOLParser.ImmutableAttributeContext,0)


        def objAttribute(self):
            return self.getTypedRuleContext(BKOOLParser.ObjAttributeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attributeDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeDecl" ):
                return visitor.visitAttributeDecl(self)
            else:
                return visitor.visitChildren(self)




    def attributeDecl(self):

        localctx = BKOOLParser.AttributeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attributeDecl)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.mutableAttribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.immutableAttribute()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 171
                self.objAttribute()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_name(self):
            return self.getTypedRuleContext(BKOOLParser.Type_nameContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def muInit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.MuInitContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.MuInitContext,i)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_mutableAttribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutableAttribute" ):
                return visitor.visitMutableAttribute(self)
            else:
                return visitor.visitChildren(self)




    def mutableAttribute(self):

        localctx = BKOOLParser.MutableAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mutableAttribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.STATIC:
                self.state = 174
                self.match(BKOOLParser.STATIC)


            self.state = 177
            self.type_name()
            self.state = 178
            self.match(BKOOLParser.ID)
            self.state = 179
            self.muInit()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 180
                self.match(BKOOLParser.COMMA)
                self.state = 181
                self.match(BKOOLParser.ID)
                self.state = 182
                self.muInit()
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 188
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MuInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(BKOOLParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_muInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMuInit" ):
                return visitor.visitMuInit(self)
            else:
                return visitor.visitChildren(self)




    def muInit(self):

        localctx = BKOOLParser.MuInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_muInit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EQ:
                self.state = 190
                self.match(BKOOLParser.EQ)
                self.state = 191
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_name(self):
            return self.getTypedRuleContext(BKOOLParser.Type_nameContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def immuInit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ImmuInitContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ImmuInitContext,i)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def getRuleIndex(self):
            return BKOOLParser.RULE_immutableAttribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutableAttribute" ):
                return visitor.visitImmutableAttribute(self)
            else:
                return visitor.visitChildren(self)




    def immutableAttribute(self):

        localctx = BKOOLParser.ImmutableAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_immutableAttribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 194
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 2:
                self.state = 195
                self.match(BKOOLParser.STATIC)
                self.state = 196
                self.match(BKOOLParser.FINAL)
                pass

            elif la_ == 3:
                self.state = 197
                self.match(BKOOLParser.FINAL)
                self.state = 198
                self.match(BKOOLParser.STATIC)
                pass


            self.state = 201
            self.type_name()
            self.state = 202
            self.match(BKOOLParser.ID)
            self.state = 203
            self.immuInit()
            self.state = 209
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKOOLParser.COMMA:
                self.state = 204
                self.match(BKOOLParser.COMMA)
                self.state = 205
                self.match(BKOOLParser.ID)
                self.state = 206
                self.immuInit()
                self.state = 211
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 212
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmuInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(BKOOLParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_immuInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmuInit" ):
                return visitor.visitImmuInit(self)
            else:
                return visitor.visitChildren(self)




    def immuInit(self):
